--- a/lyff/solution/index.html
+++ b/lyff/solution/index.html
@@ -62,6 +62,8 @@
     canvas.getContext('2d').putImageData(data, 0, 0)
   }
   
+  // Call init function to start the whole process
+  init();
 </script>
 <style>
   canvas {
