updated emscripten keys, added call to init function

--- a/lyff/solution/index.html
+++ b/lyff/solution/index.html
@@ -12,9 +12,9 @@
     const env = {
       'abortStackOverflow': () => { throw new Error('overflow'); },
       'table': new WebAssembly.Table({initial: 0, maximum: 0, element: 'anyfunc'}),
-      'tableBase': 0,
+      '__table_base': 0,
       'memory': memory,
-      'memoryBase': 1024,
+      '__memory_base': 1024,
       'STACKTOP': 0,
       'STACK_MAX': memory.buffer.byteLength,
     };
@@ -61,6 +61,7 @@
 
     canvas.getContext('2d').putImageData(data, 0, 0)
   }
+  init();
   
 </script>
 <style>
